# grafana-example

./: docker-compose.yaml  grafana-datasources.yaml  pnpm-lock.yaml  prometheus-config.yaml  promtail-config.yaml  readme.md
example-app/: Dockerfile  api.ts  app.ts  background-logger.ts  logging.ts  package.json  pnpm-lock.yaml  tsconfig.json
go-example-app/: Dockerfile  go.mod  logger.go  loki.go  main.go
js-example-app/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
js-example-app/src/: app.ts  exit-handler.ts  logging.ts  loki.ts
python-example-app/: .pdm.toml  Dockerfile  pyproject.toml
python-example-app/src/: api.py  logger.py  loki.py
