[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Milan Suk", email = "Milansuk@email.cz"},
]
dependencies = [
    "prometheus-client>=0.16.0",
    "fastapi>=0.94.0",
    "uvicorn>=0.21.0",
    "aiohttp>=3.8.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
]

[tool.pdm.scripts]
format = "black src"
